@@ -1,0 +1,16 @@
+.. _label-mon_referentiel:
+
+Mon dépôt
+=========
+
+Chaque utilisateur a la possibilité de stocker et gérer ses documents personnels dans OneGov GEVER sous « Mon dépôt »
+
+Si la fonctionnalité est activée, un espace de stockage personnel est aménagé pour chaque utilisateur lors de son premier login. Cette zone est d’apparence similaire et fonctionne de la même manière qu’un numéro de classement de la structure de travail ordinaire. Il est possible d’y créer des dossiers pour ainsi dire personnels. Ces dossiers personnels sont les homologues des dossiers d’affaires. Ainsi, les mêmes métadonnées et statuts ou phases de traitement (En cours, Terminé et Annulé) que pour un dossier d’affaires sont utilisables. La fonction de mail-in peut également être utilisée pour les dossiers personnels.
+
+|img-monreferentiel1|
+
+L’espace personnel est uniquement accessible par son utilisateur respectif, ainsi que les administrateurs. Les contenus des dossiers personnels sont également accessibles vis la recherche, mais ce, uniquement pour l’utilisateur respectif et les administrateurs. Les administrateurs peuvent éditer les contenus des dépôts personnels, mais ils ne peuvent pas y en créer des nouveaux. Les documents de l’espace personnel peuvent être déplacés vers le système de classification normal, mais pas du système de classification normal vers l’espace privé, car cela correspondrait à un effacement.
+
+La fonctionnalité « Mon dépôt » est désactivée par défaut, mais peut être activée sur demande.
+
+.. |img-monreferentiel1| image:: ../_static/img/img-monreferentiel1.png
